fix(styles): fix some UI quirks on firefox

--- a/src/components/generic/breadcrumb-selector/BreadcrumbSelector.scss
+++ b/src/components/generic/breadcrumb-selector/BreadcrumbSelector.scss
@@ -22,6 +22,7 @@
     border-radius: 4px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
     background-color: $color-white;
+    overflow-x: hidden;
     overflow-y: auto;
 
     .bimdata-search-bar {
