--- a/src/components/specific/projects/project-card/ProjectCard.scss
+++ b/src/components/specific/projects/project-card/ProjectCard.scss
@@ -25,8 +25,9 @@
       height: 24px;
       padding: $spacing-unit/2 $spacing-unit;
       background-color: $color-primary;
-      color: $color-white;
+      line-height: 12px;
       text-transform: uppercase;
+      color: $color-white;
     }
 
     &:deep() {
