--- a/src/components/specific/users/project-users-manager/ProjectUsersManager.scss
+++ b/src/components/specific/users/project-users-manager/ProjectUsersManager.scss
@@ -27,8 +27,6 @@
       .project-users-manager__list-container {
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
         padding-bottom: $spacing-unit/2;
         overflow-x: hidden;
         overflow-y: auto;
